# steam-ml

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  WARP.md  pyproject.toml  run_steam_spy_ingest.py  run_steam_store_ingest.py  run_steam_web_ingest.py
.github/workflows/: ci.yml
config/sources/: steam_web_api.yaml
data/bronze/dummy/: test.parquet
data/bronze/steam_spy/: all.parquet
data/bronze/steam_store/: app_details.parquet
data/raw/steam_spy/: all.json
data/raw/steam_store/: app_details.json
notebooks/: 01_eda_app_list_and_store.ipynb
src/ingestion/: base.py  steam_spy.py  steam_store.py  steam_web.py
src/utils/: io.py  logging.py
tests/: conftest.py
tests/ingestion/: test_base_ingestor.py
tests/utils/: test_config.py  test_logging.py  tets_io.py
