[project]
name = "steam-ml-platform"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "requests==2.32.3",
    "pandas==2.2.3",
    "pyyaml==6.0.2",
    "pydantic==2.9.2",
    "tqdm==4.67.0",
    "tenacity==9.0.0",

    "black==24.10.0",
    "ruff==0.7.4",
    "pre-commit==3.8.0",
    "httpx==0.27.2",
]

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = false

[tool.ruff]
line-length = 100
target-version = "py311"

select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # import sorting
    "UP",  # python upgrades
]

ignore = [
    "E501",  # line-length (Black regelt das)
]

fix = true
